--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "config": "file:./config.json"
   },
   "scripts": {
     "start": "concurrently --kill-others \"less-watch-compiler --config less-watcher.config.json\" \"react-scripts start\"",
